Add user route to update username
